--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha test/test.js --compilers js:babel-core/register",
     "build": "babel server.js --out-dir build",
     "dev-start": "babel-watch server.js",
-    "start": "babel-node server.js"
+    "start": "nodemon --exec babel-node server.js"
   },
   "repository": {
     "type": "git",
