--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^9.0.0",
     "babel-preset-env": "^1.7.0",
     "babel-watch": "^2.0.7",
