--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha test/test.js --compilers js:babel-core/register",
-    "build": "babel server.js --out-dir build",
+    "build": "babel server.js src -d lib",
     "dev-start": "babel-watch server.js",
     "start": "babel-node server.js"
   },
