--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Fast Food Fast Nodejs API endpoints to power the fast food fast web app client",
   "main": "server.js",
   "scripts": {
-    "test": "mocha test/test.js --compilers js:babel-core/register",
+    "test": "mocha test/test.js --compilers js:babel-core/register --exit",
     "build": "babel server.js --out-dir build",
     "dev-start": "babel-watch server.js",
-    "start": "nodemon --exec babel-node server.js"
+    "start": "babel-node server.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^9.0.0",
     "babel-preset-env": "^1.7.0",
     "babel-watch": "^2.0.7",
