--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fast Food Fast Nodejs API endpoints to power the fast food fast web app client",
   "main": "server.js",
   "scripts": {
-    "test": "mocha test/test.js --compilers js:babel-core/register --exit",
+    "test": "nyc mocha test/test.js --compilers js:babel-core/register --exit",
     "build": "babel server.js --out-dir build",
     "dev-start": "babel-watch server.js",
     "start": "babel-node server.js"
@@ -49,6 +49,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "mocha": "^5.2.0",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "nyc": "^13.0.1"
   }
 }
