--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "description": "Fast Food Fast Nodejs API endpoints to power the fast food fast web app client",
   "main": "server.js",
   "scripts": {
-    "test": "mocha test/test.js --compilers js:babel-core/register --exit",
+    "test": "nyc --reporter=html --reporter=text mocha test/test.js --compilers js:babel-core/register --exit",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "build": "babel server.js --out-dir build",
     "dev-start": "babel-watch server.js",
     "start": "babel-node server.js"
+  },
+  "nyc": {
+    "exclude": [
+      "**/Food.model.js",
+      "build"
+    ]
   },
   "repository": {
     "type": "git",
@@ -43,12 +50,15 @@
     "babel-watch": "^2.0.7",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
+    "coveralls": "^3.0.2",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "mocha": "^5.2.0",
-    "nodemon": "^1.18.4"
+    "mocha-lcov-reporter": "^1.3.0",
+    "nodemon": "^1.18.4",
+    "nyc": "^13.0.1"
   }
 }
