--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Fast Food Fast Nodejs API endpoints to power the fast food fast web app client",
   "main": "server.js",
   "scripts": {
-    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha test/test.js --compilers js:babel-core/register --exit",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "build": "babel server.js --out-dir build",
     "dev-start": "babel-watch server.js",
-    "start": "babel-node server.js"
+    "start": "babel-node server.js",
+    "cover": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --compilers js:babel-core/register ./test/test.js",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha test/test.js --compilers js:babel-core/register --exit"
   },
   "nyc": {
     "exclude": [
