--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Fast Food Fast Nodejs API endpoints to power the fast food fast web app client",
   "main": "server.js",
   "scripts": {
-    "test": "nyc mocha test/test.js --compilers js:babel-core/register --exit",
     "build": "babel server.js --out-dir build",
     "dev-start": "babel-watch server.js",
-    "start": "babel-node server.js"
+    "start": "babel-node server.js",
+    "test": "nyc mocha test/test.js --compilers js:babel-core/register --exit"
   },
   "repository": {
     "type": "git",
