--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "babel server.js --out-dir build",
     "dev-start": "babel-watch server.js",
     "start": "babel-node server.js",
-    "test": "nyc mocha test/test.js --compilers js:babel-core/register --exit"
+    "test": "nyc mocha test/test.js --compilers js:babel-core/register --exit",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -43,6 +44,7 @@
     "babel-watch": "^2.0.7",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
+    "coveralls": "^3.0.2",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
