--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "babel server.js --out-dir build",
     "dev-start": "babel-watch server.js",
     "start": "babel-node server.js",
-    "test": "nyc mocha test/test.js --compilers js:babel-core/register --exit",
+    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha test/test.js --compilers js:babel-core/register --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "nyc": {
@@ -58,6 +58,7 @@
     "eslint-plugin-react": "^7.11.1",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.4",
     "nyc": "^13.0.1"
   }
