--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "babel server.js --out-dir build",
     "dev-start": "babel-watch server.js",
-    "start": "babel-node server.js",
+    "start": "babel-watch server.js",
     "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha test/test.js --compilers js:babel-core/register --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
