--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
   "homepage": "https://github.com/henperi/Fast-Food-Fast#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
+    "make-runnable": "^1.3.6",
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
+    "pg": "^7.4.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
