--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "build": "babel server.js --out-dir build",
     "dev-start": "babel-watch server.js",
     "start": "babel-watch server.js",
+    "cover": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --compilers js:babel-core/register test/test.js",
     "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha test/test.js --compilers js:babel-core/register --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
