--- a/server/.travis.yml
+++ b/server/.travis.yml
@@ -18,4 +18,4 @@ before_script:
   - ./cc-test-reporter after-build --debug -t lcov --exit-code $?
 
 after_success: npm run coverage
-  - ./cc-test-reporter after-build --prefix server/server.js --exit-code $TRAVIS_TEST_RESULT
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
