--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "fast-food-fast",
   "version": "1.0.0",
   "description": "Fast Food Fast Nodejs API endpoints to power the fast food fast web app client",
-  "main": "server.js",
+  "main": "./server/server.js",
   "scripts": {
-    "build": "babel server.js --out-dir build",
-    "dev-start": "babel-watch server.js",
-    "start": "babel-watch server.js",
-    "cover": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --compilers js:babel-core/register test/test.js",
-    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha test/test.js --compilers js:babel-core/register --exit",
+    "build": "babel ./server/server.js --out-dir build",
+    "dev-start": "babel-watch ./server/server.js",
+    "start": "babel-watch ./server/server.js",
+    "cover": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --compilers js:babel-core/register ./server/test/test.js",
+    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha ./server/test/test.js --compilers js:babel-core/register --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "nyc": {
     "exclude": [
-      "**/Food.model.js",
       "build"
     ]
   },
