--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
+    "pg": "^7.4.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
