--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "babel-watch ./server/server.js",
     "cover": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --compilers js:babel-core/register ./server/test/test.js",
     "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha ./server/test/test.js --compilers js:babel-core/register --exit",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "migrate-up": "node server/migration createAllTables",
+    "migrate-down": "node server/migration dropAllTables"
   },
   "nyc": {
     "exclude": [
@@ -35,12 +37,14 @@
   },
   "homepage": "https://github.com/henperi/Fast-Food-Fast#readme",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
+    "make-runnable": "^1.3.6",
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
     "pg": "^7.4.3",
