--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
   "homepage": "https://github.com/henperi/Fast-Food-Fast#readme",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
+    "jsonwebtoken": "^8.3.0",
     "make-runnable": "^1.3.6",
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
