--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
   code_climate:
     repo_token:
       secure: "1cad8483e05f9dd48535e678ceea1b6e33034228fd804b0f4278e9f3e69d221e"
+
 services:
   - postgresql
 
@@ -21,6 +22,7 @@ before_script:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
   - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -c "CREATE USER foo WITH PASSWORD 'bar';" -U postgres
 
 after_success: npm run coverage
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
