--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ addons:
 services:
   - postgresql
 
+env:
+  - NODE_ENV=test
+
 script:
   - npm run test
 
@@ -21,8 +24,8 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-  - psql -c 'create database travis_ci_test;' -U postgres
-  - psql -c "CREATE USER foo WITH PASSWORD 'bar';" -U postgres
+  - psql -c 'create database fast-food-fast-app;' -U postgres
+  - psql -c "CREATE USER root WITH PASSWORD 'password';" -U postgres
 
 after_success: npm run coverage
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
