--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: node_js
 
 node_js:
   - "node"
-  - "8"
 
 addons:
   code_climate:
@@ -24,7 +23,7 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-  - psql -c 'create database fast-food-fast-app;' -U postgres
+  - psql -c 'create database fast_food_fast;' -U postgres
   - psql -c "CREATE USER root WITH PASSWORD 'password';" -U postgres
 
 after_success: npm run coverage
