--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,15 @@ language: node_js
 node_js:
   - "node"
 
-# addons:
-#   code_climate:
-#     repo_token: 7147a7584017be0dd9ef3401c20ded1483e9a9594b52067833b7d6ba0c048f39
+addons:
+  code_climate:
+    repo_token: 7147a7584017be0dd9ef3401c20ded1483e9a9594b52067833b7d6ba0c048f39
 
 services:
   - postgresql
 
 env:
   - NODE_ENV=test
-  global:
-    - CC_TEST_REPORTER_ID=7147a7584017be0dd9ef3401c20ded1483e9a9594b52067833b7d6ba0c048f39
 
 script:
   - npm run test
