--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,9 @@ script:
   - npm run test
 
 before_script:
-  - cd server
+  - npm run migrate-down
+  - npm run migrate-up
+  - npm run insertAdmin
   - npm install
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
