--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Fast Food Fast Nodejs API endpoints to power the fast food fast web app client",
   "main": "./server/server.js",
   "scripts": {
-    "build": "babel ./server/server.js --out-dir build",
+    "build": "babel ./server --out-dir build",
     "dev-start": "babel-watch ./server/server.js",
-    "start": "babel-watch ./server/server.js",
+    "start": "npm run build && node ./build/server.js",
     "cover": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --compilers js:babel-core/register ./server/test/test.js",
     "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha ./server/test/test.js --compilers js:babel-core/register --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
