Refactor incoming requests validation
- Create a validation middleware
- Add the validation middleware to the necessary endpoints
- Move all req.body validations into the validation middleware from all endpoint methods
- Refactor most catch blocks to return json responses
- Update server.js to use a single routes file
- Remove some unnecessary console.log statements

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "nyc": {
     "exclude": [
-      "build"
+      "build",
+      "server/app/models/Query.model.js",
+      "server/server.js"
     ]
   },
   "repository": {
