--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ before_script:
   - ./cc-test-reporter before-build
 
 after_script:
+  - npm run coverage
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
-after_success: npm run coverage
+# after_success: npm run coverage
