--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ addons:
     repo_token:
       secure: "1cad8483e05f9dd48535e678ceea1b6e33034228fd804b0f4278e9f3e69d221e"
 
+services:
+  - postgresql
+
 env:
   - NODE_ENV=TEST
   - ENV_TYPE=TEST
@@ -23,6 +26,7 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
+  - psql -c 'create database fast_food_fast;' -U postgres
 
 after_script:
   - npm run coverage
