--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ services:
   - postgresql
 
 env:
-  - NODE_ENV=TEST
+  # - NODE_ENV=TEST
   - ENV_TYPE=TEST
 
 script:
@@ -30,6 +30,6 @@ before_script:
 
 after_script:
   - npm run coverage
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
-# after_success: npm run coverage
+after_success:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
