--- a/.env.sample
+++ b/.env.sample
@@ -6,4 +6,4 @@ SECRETE = <YOUR SECRET KEY FOR JWT>
 JWT_KEY = <YOUR SECRET KEY FOR JWT>
 ADMIN_EMAIL= <THE SUPER ADMINS EMAIL>
 ADMIN_PASSWORD=<THE SUPER ADMINS PASSWORD>
-ADMIN_ACCOUNT_DATA=<THE SUPER ADMINS DATA (OPTIONAL)>
+ADMIN_ACCOUNT_DATA=<THE SUPER ADMINS DATA (OPTIONAL)
